feat: infrastructure primaire et Cucumber rapport synthese heure
